updating variables, colors and other layout issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,28 @@
+@import 'variables';
 @import 'mixins';
+@import 'components';
+
 
 *{
     margin:0px;
     padding:0px;
+    font-family: 'Inter'; 
 }
+
+body{
+    margin:3rem 3rem;
+}
+
+p{
+    font-size:size(para);
+    line-height: 24px;
+}
+
 .wrapper {
-    width:90%;
-    margin:auto;
+    max-width:1440px;
     display: grid;
-    grid-template-rows:60px 2fr 1fr 80px;
+    margin:auto;
+    grid-template-rows:60px auto 1fr 80px;
     grid-template-columns: 2fr 1fr;
     grid-gap:20px;
     position: relative;
@@ -16,7 +30,6 @@
     @media (max-width:700px){
         grid-template-rows:auto auto auto auto;
         grid-template-columns: 1fr;
-
     }
 }   
     
@@ -24,9 +37,7 @@
 
     }
     
-    .checkbox:checked ~ nav{
-        right:0;
-    }
+   
 
     .header{
         grid-column: 1 / -1;
@@ -35,6 +46,26 @@
         display: grid;
         grid-template-rows:60px;
         grid-template-columns: 1fr 2fr;
+
+        .checkbox:checked ~ nav{
+            right:0;
+        }
+    
+        .checkbox:checked  .hamburger-icon .burger {
+            transform: rotateZ(90deg);
+        }
+        
+        .checkbox:checked  .hamburger-icon .burger-line-1 {
+            transform: rotateZ(-40deg);
+        }
+        
+        .checkbox:checked  .hamburger-icon .burger-line-2 {
+            opacity: 0;
+        }
+        
+        .checkbox:checked  .hamburger-icon .burger-line-3 {
+            transform: rotateZ(40deg);
+        }
 
         .logo{
          grid-column: 1/2;
@@ -81,24 +112,22 @@
             justify-self: right;
 
             @media (min-width:500px) and (max-width:700px){
-                position: fixed;
+                position:fixed;
                 right:-100vw;
-                width: 50%;
-                height: 100%;
-                background-color: #efefef;
+                width:50%;
+                height:100%;
                 padding-top:50px;
-                opacity: .9;
+                background-color: color(Off-white);
                 transition: right .8s cubic-bezier(1,0,0,1);
             }
 
             @media (max-width:499px){
-                position: fixed;
+                position:fixed;
                 width: 100%;
                 height: 100%;
-                background-color: #efefef;
-                opacity: .9;
                 padding-top: 50px;
                 right:-100vw;
+                background-color:color(Off-white);
                 transition: right .8s cubic-bezier(1,0,0,1);
 
             }
@@ -124,12 +153,16 @@
                         width: 100%;
                         height: 40px;
                         text-align: center;
-                        border-bottom: #000000 solid 1px;
                    }
 
                    a{
                     font-size:14px;
+                    color:color(dark-grayish-blue);
+                    text-decoration: none;
                     
+                    &:hover{
+                        color:color(soft-orange);
+                    }
 
                     @media (max-width:700px){
                         display: block;
@@ -156,13 +189,42 @@
         height: auto;
 
         
+
+        .content_hero_banner_intro{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto;
+
+              
         h1{
-            font-size: 45px;;
+            font-size: size(hd1);
+            font-weight:bold;
+            font-weight: bold;
+            grid-row: 1/2;
+            grid-column:1/2;
+            padding: 20px;
+            color: color(very-dark-blue);
+
         }
-        img{
+        div{
+            grid-row: 1/2;
+            grid-column:2/2;
+            padding: 20px;
+
+            p{
+                margin-bottom: 30px;
+            }
+
+        }
+
+        }
+
+       img{
             width: 100%;
             object-fit: cover;
         }
+
+        
 
         @media (max-width:700px){
             grid-row: 2 / 3;
@@ -173,9 +235,58 @@
     .sidebar{
         grid-row: 2 / 3;
         grid-column: 2 / 3;
-        background-color: #000000;
-        color: white;
+        background-color:color(very-dark-blue);
+        color: color(off-white);
         padding:10px;
+
+
+        h2{
+            font-size:size(hd2);
+            color:color(soft-orange);
+            margin: 10px 20px;;
+            font-weight: bold;
+
+        }
+
+        .content_sidebar_latest{
+            display: flex;
+            flex-direction: column;
+            height: inherit;
+            align-content: space-around;
+
+            .content_sidebar_latest-news{
+                height: auto;
+                margin: 10px 20px;
+                padding-bottom:20px;
+                border-bottom: color(dark-grayish-blue) solid 1px;
+                
+                &:nth-child(3){
+                    border-bottom:none !important;
+                }
+        
+                h4{
+                    font-size:size(hd4);
+                    margin-bottom: 10px;
+                    line-height: 35px;
+
+                    a{
+                        color:color(grayish-blue);
+                        text-decoration: none;
+
+                        &:hover{
+                            color:color(soft-orange);
+                        }
+                    }
+        
+                }
+        
+                p{
+                    color:color(dark-grayish-blue);
+                }
+
+                
+            }
+        }
 
         @media (max-width:700px){
             grid-row: 3 / 4;
@@ -193,7 +304,51 @@
         grid-template-columns: 1fr 1fr 1fr;
 
         &-item{
-            
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+
+        @media (max-width:700px){
+            margin-bottom: 10px;
+        }
+
+            img{
+                width:30%;
+                display: block;
+                object-fit: cover;
+                box-sizing: border-box;
+            }
+            .articles-item-right{
+                width:70%;
+                padding: 10px 30px;
+                box-sizing: border-box;
+
+                h3{
+                    font-size:size(hd3);
+                    line-height: 32px;
+                    margin-bottom: 10px;
+                    font-weight: bold;
+
+                    a{
+                        text-decoration: none;
+                        color :color(very-dark-blue);
+
+                        &:hover{
+                          color:color(soft-red);
+                        }
+                    }
+
+                }
+
+                div{
+                    margin-bottom:10px;
+                    font-size:size(anb);
+                    color:color(grayish-blue);
+                    font-weight: bold;
+                }
+            }
+
         }
 
         @media (max-width:700px){
